chore(workspace): add usefull commands to the monorepo

--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
+    "dev:admin": "turbo dev --filter=@card-corp/admin",
+    "dev:docs": "turbo dev --filter=@card-corp/docs",
+    "dev:web": "turbo dev --filter=@card-corp/web",
     "lint": "biome check .",
     "lint:fix": "biome check . --write",
     "check-types": "turbo check-types",
+    "clean": "turbo clean && rm -rf node_modules && rm -rf .turbo",
     "prepare": "husky"
   },
   "devDependencies": {
