--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "dev:web": "turbo dev --filter=web",
     "lint": "biome check .",
     "lint:fix": "biome check . --write",
+    "changeset": "changeset",
+    "changeset:version": "changeset version",
     "check-types": "turbo check-types",
     "clean": "turbo clean && rm -rf node_modules && rm -rf .turbo",
     "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@changesets/cli": "^2.27.10",
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "husky": "^9.1.7",
