--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,9 +4,8 @@
   "type": "module",
   "private": true,
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./styles/global.css": "./src/styles/global.css",
+    "./components": "./src/components/index.ts"
   },
   "scripts": {
     "generate:component": "turbo gen react-component",
@@ -15,6 +14,7 @@
   },
   "devDependencies": {
     "@card-corp/typescript-config": "workspace:*",
+    "@storybook/react": "^8.4.7",
     "@turbo/gen": "^1.12.4",
     "@types/node": "^20.11.24",
     "@types/react": "18.3.0",
@@ -22,6 +22,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
