--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "@card-corp/typescript-config/react-library.json",
+  "extends": "@card-corp/typescript-config/nextjs.json",
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "typings.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
