--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev:docs": "turbo dev --filter=docs",
     "dev:web": "turbo dev --filter=web",
     "dev:storybook": "turbo dev --filter=storybook",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
     "lint": "biome check .",
     "lint:fix": "biome check . --write",
     "changeset": "changeset",
