--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,8 @@
     "./components": "./src/components/index.ts"
   },
   "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
@@ -15,14 +17,22 @@
   "devDependencies": {
     "@card-corp/typescript-config": "workspace:*",
     "@storybook/react": "^8.4.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@turbo/gen": "^1.12.4",
-    "@types/node": "^20.11.24",
+    "@types/jest": "^29.5.14",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "5.5.4"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
+    "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
