--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src", "typings.d.ts"],
+  "include": ["src", "typings.d.ts", "jest.setup.ts"],
   "exclude": ["node_modules", "dist"]
 }
